# ekzekuto

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README  README.md  project_def.prop  tizen-manifest.xml
lib/: runme.sh
packaging/: ekzekuto.spec
src/: main.cpp  main.h
