CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ekzekuto)

SET(SRCS
  src/main.cpp
  )

SET(VENDOR "example")
SET(PACKAGE ${PROJECT_NAME})
SET(TLD "org")
SET(PKGNAME "${TLD}.${VENDOR}.${PACKAGE}")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
#SET(INSTALL_DIR_APPS "/usr/apps/${PKGNAME}")
SET(INSTALL_DIR_PRE "/usr")

SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(DATADIR "${PREFIX}/data")
SET(LOCALEDIR "${RESDIR}/locale")
SET(ICONDIR "${RESDIR}/icons")
SET(DESKTOPICONDIR "${ICONDIR}/default/small")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
  capi-appfw-application
  capi-system-system-settings
  elementary
  evas
  efl-extension
  ecore-input
  ecore
  vconf
  dlog
  glib-2.0
  )

FIND_LIBRARY(LIB_M m)

# Apply Public emulator image
FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/docs/logo.png DESTINATION ${ICONDIR}
  RENAME ${PKGNAME}.png
  )

ADD_DEFINITIONS(${pkgs_CFLAGS})
ADD_DEFINITIONS("-fpie")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")
ADD_DEFINITIONS("-DSLP_PROF")

ADD_DEFINITIONS("-DVENDOR=\"${VENDOR}\"")
ADD_DEFINITIONS("-DPACKAGE=\"${PACKAGE}\"")
ADD_DEFINITIONS("-DPACKAGE_NAME=\"${PKGNAME}\"")
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")

ADD_DEFINITIONS("-DINSTALL_DIR_APPS=\"${INSTALL_DIR_APPS}\"")
ADD_DEFINITIONS("-DBINDIR=\"${BINDIR}\"")
ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
ADD_DEFINITIONS("-DICONDIR=\"${ICONDIR}\"")


ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} "-pie" ${LIB_M})


INSTALL(TARGETS ${PROJECT_NAME} DESTINATION
  ${BINDIR}
  )

# install application HOME directory
INSTALL(DIRECTORY DESTINATION ${DATADIR})

install(FILES ${CMAKE_SOURCE_DIR}/tizen-manifest.xml DESTINATION
  /usr/share/packages/
  RENAME ${PKGNAME}.xml
  )

# desktop icon
set(PREFIX ${CMAKE_INSTALL_PREFIX})
install(FILES ${CMAKE_SOURCE_DIR}/docs/logo.png DESTINATION
  /usr/share/icons/default/small/${PKGNAME}.png
  )
